fixed x overflow issue on web page.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.w-screen {
+  width: 100%;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
